# tw-stock-monitor

./: .gitignore  Plan.md  README.md  pyproject.toml
config/: .env.example  rules.yaml  watchlist.yaml
docker/: Dockerfile  compose.yml
scripts/: rule_charts.py  rule_visual.py
src/monitor/: app.py  config.py  demo.py  instruments.py  scheduler.py  testing_flow.py
src/monitor/backtest/: cli.py  engine.py
src/monitor/broker/: factory.py  ib_client.py  ib_quote_check.py  multi_client.py  shioaji_client.py
src/monitor/data/: bar_builder.py  historical.py  mock.py  store.py
src/monitor/indicators/: __init__.py  atr.py  bbands.py  compute.py  donchian.py  kd.py  ma.py  macd.py  registry.py
src/monitor/notify/: telegram.py
src/monitor/rules/: base.py  bb_reversal.py  engine.py  ma_cross_reversal.py  range_breakout.py
tests/: test_app_loop.py  test_config_watchlist.py  test_instruments.py  test_scheduler.py  test_smoke.py
tests/backtest/: test_engine.py
tests/broker/: test_ib_client.py  test_multi_client.py  test_symbol_routing.py
tests/data/: test_bar_builder.py  test_daily_timeframe.py  test_historical.py  test_store.py
tests/indicators/: test_atr.py  test_bbands.py  test_compute.py  test_donchian.py  test_kd.py  test_ma.py  test_macd.py  test_registry.py
tests/rules/: test_applies_to.py  test_bb_reversal.py  test_engine.py  test_ma_cross_reversal.py  test_range_breakout.py
